<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SearchActivity"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    >


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/searchLayout"
    android:gravity="center">
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/semis_code"
        android:id="@+id/search_bar"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:background="@drawable/edt_bg"
        android:inputType="number"
        android:layout_weight=".9"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/done"
        android:layout_gravity="center"
        android:id="@+id/btnSearchDone"
        android:layout_marginStart="5dp"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        />
</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/downloadedFileMessage"
        android:visibility="gone"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginVertical="10dp"
        android:background="#ACA6A6"
        tools:ignore="SmallSp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_ssms_file"
        android:id="@+id/btnPickSSMS"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pickFileMessage"
        android:visibility="gone"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rvSearch"
        android:visibility="invisible"
        />

<com.google.android.material.button.MaterialButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/analyze"
    android:enabled="false"
    android:id="@+id/btnStartMatching"/>

</androidx.appcompat.widget.LinearLayoutCompat>